--- a/index.html
+++ b/index.html
@@ -22,5 +22,23 @@
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
+        <!-- table for showing data -->
+        <div class="row" id="table">
+            <div class="col-sm-10 offset-sm-1">
+                <div class="table-responsive rounded">
+                    <table class="table table-sm table-borderless table-hover table-light table-striped">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Height</th>
+                                <th scope="col">Mass</th>
+                                <th scope="col">Created</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tbody"></tbody>
+                    </table>
+                    </div>
+            </div>
+        </div>
     </body>
 </html>    
