Added README details and updated table with missing heading

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                                 <th scope="col">Height</th>
                                 <th scope="col">Mass</th>
                                 <th scope="col">Created</th>
+                                <th scope="col">Edited</th>
                             </tr>
                         </thead>
                         <tbody id="tbody"></tbody>
